# QtWebView2

./: .gitignore  README.md  README_ZH.md  pyproject.toml  requirements.txt
.github/workflows/: publish-to-pypi.yml
src/qtwebview2/: __init__.py  _dotnet_bridge.py  exceptions.py  logger.py  utils.py  widget.py  wsgi_server.py
